--- a/src/main/resources/reports/solicitud_interconsulta2.jrxml
+++ b/src/main/resources/reports/solicitud_interconsulta2.jrxml
@@ -1,6 +1,5 @@
 <!-- Created with Jaspersoft Studio version 7.0.1.final using JasperReports Library version 7.0.1-573496633c2b4074e32f433154b543003f7d2498  -->
 <jasperReport name="exampleReport" language="java" pageWidth="595" pageHeight="842" columnWidth="515" leftMargin="40" rightMargin="40" topMargin="40" bottomMargin="40" uuid="5d8f2f6f-d93e-4945-b55a-8e1b629f2c57">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="hospitalInterconsultado" class="java.lang.String"/>
 	<parameter name="unidadInterconsultada" class="java.lang.String"/>
 	<parameter name="queDeseaSaber" class="java.lang.String"/>
@@ -23,12 +22,15 @@
 	<parameter name="nombreCompletoMedico" class="java.lang.String"/>
 	<parameter name="nombreCompletoPaciente" class="java.lang.String"/>
 	<detail>
-		<band height="55">
+		<band height="45">
 			<element kind="staticText" uuid="10563923-6b66-43f5-a075-411f5e6b111c" x="20" y="13" width="160" height="30" fontSize="12.0" bold="false" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[HOSPITAL CLINICO]]></text>
 			</element>
+			<element kind="image" uuid="ab5c3dad-3546-4041-89c8-b2ce2e7f4510" x="440" y="0" width="38" height="30">
+				<expression><![CDATA[$P{IMAGE_PATH}]]></expression>
+			</element>
 		</band>
-		<band height="131">
+		<band height="120">
 			<element kind="staticText" uuid="377a5459-3c71-47ae-9b8f-ffa618933d71" mode="Opaque" x="20" y="8" width="120" height="16" forecolor="#FFFFFF" backcolor="#0A4A6E" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[Ap. paterno]]></text>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -121,97 +123,132 @@
 				<pen lineWidth="2.0"/>
 			</element>
 		</band>
-		<band height="308">
-			<element kind="staticText" uuid="69807dce-685d-4085-9557-6c1505a09f10" stretchType="NoStretch" x="0" y="0" width="515" height="26" fontSize="12.0" bold="true" hTextAlign="Center" vTextAlign="Middle">
+		<band height="290" splitType="Stretch">
+			<element kind="staticText" uuid="69807dce-685d-4085-9557-6c1505a09f10" stretchType="ElementGroupHeight" x="0" y="0" width="515" height="30" fontSize="12.0" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[SOLICITUD INTERCONSULTA]]></text>
 				<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			</element>
-			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" x="0" y="26" width="515" height="26" bold="true" vTextAlign="Middle">
+			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" x="0" y="30" width="515" height="16" bold="true">
 				<text><![CDATA[Hospital interconsultado]]></text>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			</element>
-			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" stretchType="NoStretch" x="0" y="52" width="515" height="26" textAdjust="StretchHeight" evaluationTime="Auto">
+			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="ElementGroupHeight" x="0" y="46" width="515" height="32" textAdjust="StretchHeight" evaluationTime="Auto">
 				<expression><![CDATA[$P{hospitalInterconsultado}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<box>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 			</element>
-			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" positionType="Float" x="0" y="78" width="515" height="26" bold="true" vTextAlign="Middle">
+			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" x="0" y="78" width="515" height="16" bold="true">
 				<text><![CDATA[Unidad interconsultada]]></text>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			</element>
-			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="NoStretch" x="0" y="104" width="515" height="26" textAdjust="StretchHeight" evaluationTime="Auto">
+			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="ElementGroupHeight" x="0" y="94" width="515" height="32" textAdjust="StretchHeight" evaluationTime="Auto">
 				<expression><![CDATA[$P{unidadInterconsultada}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<box>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 			</element>
-			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" positionType="Float" x="0" y="130" width="515" height="26" bold="true" vTextAlign="Middle">
+			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" x="0" y="126" width="515" height="16" bold="true">
 				<text><![CDATA[Que desea saber?]]></text>
 			</element>
-			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="NoStretch" x="0" y="156" width="515" height="26" textAdjust="StretchHeight" evaluationTime="Auto">
+			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="ElementGroupHeight" x="0" y="142" width="515" height="32" textAdjust="StretchHeight" evaluationTime="Auto">
 				<expression><![CDATA[$P{queDeseaSaber}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<box>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 			</element>
-			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" positionType="Float" x="0" y="182" width="515" height="26" bold="true" vTextAlign="Middle">
+			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" x="0" y="174" width="515" height="16" bold="true">
 				<text><![CDATA[Sintomatologia]]></text>
 			</element>
-			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="NoStretch" x="0" y="208" width="515" height="26" textAdjust="StretchHeight" evaluationTime="Auto">
+			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="ElementGroupHeight" x="0" y="190" width="515" height="32" textAdjust="StretchHeight" evaluationTime="Auto">
 				<expression><![CDATA[$P{sintomatologia}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<box>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 			</element>
-			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" positionType="Float" x="0" y="234" width="515" height="26" bold="true" vTextAlign="Middle">
+			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49424" x="0" y="222" width="515" height="16" bold="true">
 				<text><![CDATA[Tratamiento]]></text>
 			</element>
-			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="NoStretch" x="0" y="260" width="515" height="26" textAdjust="StretchHeight" evaluationTime="Auto">
+			<element kind="textField" uuid="86c838e0-48c0-41b8-a974-0ea88b6dff9d" positionType="Float" stretchType="ElementGroupHeight" x="0" y="240" width="515" height="32" textAdjust="StretchHeight" evaluationTime="Auto">
 				<expression><![CDATA[$P{tratamiento}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<box>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 			</element>
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 		</band>
-		<band height="76">
-			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49408" x="20" y="14" width="160" height="16" bold="true" hTextAlign="Center" vTextAlign="Middle">
+		<band height="66">
+			<element kind="staticText" uuid="f198ee49-d918-495f-88ed-81a814c49408" x="21" y="0" width="160" height="16" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[Fecha]]></text>
 				<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			</element>
-			<element kind="staticText" uuid="b2a8640a-045a-4845-b459-7f45356d84af" x="180" y="14" width="160" height="16" bold="true" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="staticText" uuid="b2a8640a-045a-4845-b459-7f45356d84af" x="181" y="0" width="160" height="16" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[Medico]]></text>
 				<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			</element>
-			<element kind="staticText" uuid="d7a20822-7e97-4093-9c6b-8ee86fa68917" x="341" y="15" width="160" height="16" bold="true" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="staticText" uuid="d7a20822-7e97-4093-9c6b-8ee86fa68917" x="342" y="1" width="160" height="16" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[Paciente]]></text>
 				<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			</element>
-			<element kind="textField" uuid="65a800f9-e325-4ba5-b139-83052811a32c" x="20" y="30" width="160" height="32" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="65a800f9-e325-4ba5-b139-83052811a32c" x="21" y="16" width="160" height="32" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{fecha}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<property name="com.jaspersoft.studio.unit.y" value="px"/>
 			</element>
-			<element kind="textField" uuid="aeb953bc-f922-4d01-ad62-cd19aee4d8a2" x="180" y="30" width="160" height="20" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="aeb953bc-f922-4d01-ad62-cd19aee4d8a2" x="181" y="16" width="160" height="20" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{firmaMedico}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<property name="com.jaspersoft.studio.unit.y" value="px"/>
 			</element>
-			<element kind="textField" uuid="4fc2ef32-efc3-43c3-95cb-6f90af903158" x="340" y="30" width="160" height="20" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="4fc2ef32-efc3-43c3-95cb-6f90af903158" x="341" y="16" width="160" height="20" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{firmaPaciente}]]></expression>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<property name="com.jaspersoft.studio.unit.y" value="px"/>
 			</element>
-			<element kind="rectangle" uuid="5bc1ba83-fe2d-4fd2-ac5c-ec81ef4c6432" mode="Transparent" x="19" y="14" width="161" height="48">
+			<element kind="rectangle" uuid="5bc1ba83-fe2d-4fd2-ac5c-ec81ef4c6432" mode="Transparent" x="20" y="0" width="161" height="48">
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<pen lineWidth="2.0"/>
 			</element>
-			<element kind="rectangle" uuid="dfee355b-d9c2-4015-a8ad-dcd9e22b1ba4" mode="Transparent" x="180" y="14" width="161" height="48">
+			<element kind="rectangle" uuid="dfee355b-d9c2-4015-a8ad-dcd9e22b1ba4" mode="Transparent" x="181" y="0" width="161" height="48">
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<pen lineWidth="3.0"/>
 			</element>
-			<element kind="rectangle" uuid="15eea7cd-a4d2-4ffc-ad58-7d72f103beb5" mode="Transparent" x="340" y="14" width="161" height="48">
+			<element kind="rectangle" uuid="15eea7cd-a4d2-4ffc-ad58-7d72f103beb5" mode="Transparent" x="341" y="0" width="161" height="48">
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<pen lineWidth="3.0"/>
 			</element>
-			<element kind="textField" uuid="f37a04dd-d577-4f17-9c8c-c7f7f75b0050" x="179" y="50" width="161" height="12" fontSize="8.0" hTextAlign="Center">
+			<element kind="textField" uuid="f37a04dd-d577-4f17-9c8c-c7f7f75b0050" x="180" y="36" width="161" height="12" fontSize="8.0" hTextAlign="Center">
 				<expression><![CDATA[$P{nombreCompletoMedico}]]></expression>
 			</element>
-			<element kind="textField" uuid="335cbf11-ddce-4a83-a6c3-7a6074cba0a6" x="340" y="50" width="161" height="12" fontSize="8.0" hTextAlign="Center">
+			<element kind="textField" uuid="335cbf11-ddce-4a83-a6c3-7a6074cba0a6" x="341" y="36" width="161" height="12" fontSize="8.0" hTextAlign="Center">
 				<expression><![CDATA[$P{nombreCompletoPaciente}]]></expression>
 			</element>
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
